Revert "Make sure address-bar can't be in semi visible position."
This reverts commit 18c6a3b5d4834eeafceedbddde35dcd4a14348fc.

--- a/css/theme.css
+++ b/css/theme.css
@@ -51,7 +51,7 @@ body {
 main {
   height: 100vh;
   width: 100vw;
-  overflow: -moz-hidden-unscrollable;
+  overflow-y: hidden;
   flex-flow: column;
   background-color: var(--bg);
   color: black;
